--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -8,7 +8,7 @@
 @media only screen and (min-width: 0em) {
     // Website colors
     :root {
-        --primary: #ffba19;
+        --primary: #f6761a;
         --primaryLight: #ffd675;
         --secondary: #001f3f;
         --secondaryLight: #001f3f;
